fixed: spacing and font-sizes

--- a/src/apps/properties/src/components/WebsiteCard/WebsiteCard.less
+++ b/src/apps/properties/src/components/WebsiteCard/WebsiteCard.less
@@ -4,7 +4,6 @@
 .WebsiteCard {
   padding: 0;
   box-shadow: 0 0 5px #d6e1f3;
-
   display: flex;
   flex-direction: column;
   flex: 0 0 350px;
@@ -12,7 +11,7 @@
   margin: 1rem;
   @supports (display: grid) {
     display: grid;
-    grid-template-rows: 1fr 3fr 35px;
+    grid-template-rows: 1fr 206px 35px;
     margin: 0;
   }
 
