--- a/src/apps/properties/src/components/WebsiteInvite/WebsiteInvite.less
+++ b/src/apps/properties/src/components/WebsiteInvite/WebsiteInvite.less
@@ -15,7 +15,7 @@
   margin: 1rem;
   @supports (display: grid) {
     display: grid;
-    grid-template-rows: 1fr 3fr 50px;
+    grid-template-rows: 1fr 206px 50px;
     margin: 0;
   }
 
@@ -23,6 +23,7 @@
     border-bottom: 1px solid #5c708a;
     display: flex;
     align-items: center;
+    color: @zesty-white;
   }
 
   .cover {
