--- a/src/apps/properties/src/views/PropertiesList/components/ColumnList/ColumnList.less
+++ b/src/apps/properties/src/views/PropertiesList/components/ColumnList/ColumnList.less
@@ -25,10 +25,7 @@
     .SectionTitle {
       border-bottom: 1px solid #c0cee7;
       font-size: 1.4em;
-      margin: 2rem 0 0 0;
-    }
-    .SectionTitle:first-child {
-      margin-top: 1rem;
+      margin: 28px 0 0 0;
     }
     .NoResults {
       text-align: center;
