--- a/src/apps/properties/src/views/PropertiesList/components/GridList/GridList.less
+++ b/src/apps/properties/src/views/PropertiesList/components/GridList/GridList.less
@@ -12,8 +12,8 @@
   }
 
   .SectionTitle {
-    margin: 2rem 0 0 0;
-    // font-weight: 200;
+    margin: 28px 0 0 0;
+    // font-size: 28px;
   }
 
   .siteList {
@@ -24,8 +24,8 @@
     flex-wrap: wrap;
     @supports (display: grid) {
       display: grid;
-      grid-gap: 2rem;
-      grid-template-columns: repeat(auto-fill, 338px);
+      grid-gap: 28px;
+      grid-template-columns: repeat(auto-fill, 350px);
       grid-auto-rows: minmax(10rem, auto);
     }
   }
