--- a/src/apps/properties/src/views/PropertiesList/components/PropertiesHeader/PropertiesHeader.less
+++ b/src/apps/properties/src/views/PropertiesList/components/PropertiesHeader/PropertiesHeader.less
@@ -19,7 +19,7 @@
 
   .Actions {
     display: flex;
-    margin: 0 2rem 0 0;
+    // margin: 0 2rem 0 0;
     flex: 1;
 
     .Ecosystem {
